--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-animation-on-scroll": "^5.1.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
