--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react": "^18.1.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-canvas-confetti": "^1.3.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.5",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
